--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       width: 100%;
       max-width: 1200px;
       margin: 0 auto;
-      background-color: red;
+      background: url(pattern.svg);
       position: relative;
     }
 
