--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       width: 100%;
       max-width: 1200px;
       margin: 0 auto;
-      background: url(pattern.svg);
+      background: url(pattern.png);
       position: relative;
     }
 
@@ -71,7 +71,7 @@
     .further-info {
       clear: left;
       padding: 40px 0;
-      background: url(pattern.png);
+      background: url(mdn.svg);
       box-shadow: inset 0 3px 2px rgba(0, 0, 0, 0.5),
         inset 0 -3px 2px rgba(0, 0, 0, 0.5);
     }
