--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     /* main section and video styling */
 
     main {
-      background: #ccc;
+      background: url(mozilla-dinosaur400.png);
     }
 
     article {
